Clean up notebook

--- a/notebooks/beta_event_inhibition.ipynb
+++ b/notebooks/beta_event_inhibition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "099f69b83c524fd2bc8e01bfc7f6d6e6",
+       "model_id": "8900a9b375554e1e868cd5bc1e86bd20",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(SelectionSlider(description='Prox->L2B Strength', layout=Layout(width='500px'), options=…"
+       "interactive(children=(SelectionSlider(description='Prox->L2B Strength', index=9, layout=Layout(width='500px'),…"
       ]
      },
      "metadata": {},
@@ -59,20 +59,13 @@
     "def plot_dipole(p0, p1, p2, p3):\n",
     "    idx = lookup_dict[(p0, p1, p2, p3)]\n",
     "    \n",
-    "    plt.figure(figsize=(6,6))\n",
+    "    plt.figure(figsize=(6,4))\n",
     "    plt.plot(dpl_data[idx,:])\n",
     "    plt.ylabel('Dipole (nAm)')\n",
     "    plt.xlabel('Time (ms)')\n",
-    "    plt.ylim([-5, 5])\n",
+    "    plt.ylim([-7, 7])\n",
     "    plt.title(idx)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
