--- a/notebooks/beta_event_inhibition.ipynb
+++ b/notebooks/beta_event_inhibition.ipynb
@@ -43,46 +43,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%matplotlib widget\n",
     "\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(7,3), tight_layout=True, gridspec_kw={'width_ratios': [1, 0.7]})\n",
+    "fig, axes = plt.subplots(1, 4, figsize=(11,3), tight_layout=True)\n",
+    "input_type_list = ['min_amp', 'nn_features', 'raw_waveform']\n",
     "\n",
     "@interact(**slider_dict)\n",
     "def plot_dipole(p0, p1, p2):\n",
-    "    idx = lookup_dict[(p0, p1, p2)]\n",
-    "    for line in axes[0].get_lines(): # ax.lines:\n",
-    "        line.remove()\n",
+    "    for idx in range(4):\n",
+    "        axes[idx].clear()\n",
+    "    cond_idx = lookup_dict[(p0, p1, p2)]\n",
     "\n",
-    "    axes[1].clear()\n",
+    "    axes[3].plot(dpl_data[cond_idx,:], color='C3')\n",
+    "    axes[3].set_ylabel('Conditoning Waveform')\n",
+    "    axes[3].set_xlabel('Time (ms)')\n",
+    "    axes[3].set_ylim([-20, 20])\n",
+    "    axes[3].set_title('Dipole')\n",
     "\n",
-    "    axes[0].plot(dpl_data[idx,:], color='C3')\n",
-    "    axes[0].set_ylabel('Dipole (nAm)')\n",
-    "    axes[0].set_xlabel('Time (ms)')\n",
-    "    axes[0].set_ylim([-20, 20])\n",
-    "    axes[0].set_title(idx)\n",
-    "\n",
-    "    arr_img = plt.imread(f'../data/marginal_figures/params3_sims10240_nn_features_marginals_{idx}.png')\n",
-    "    im = OffsetImage(arr_img, zoom=0.25)\n",
-    "    ab = AnnotationBbox(im, (1, 0), xycoords='data', box_alignment=(1.1,-0.1))\n",
-    "    axes[1].add_artist(ab)\n",
-    "    axes[1].axis('off')\n",
+    "    for idx, input_type in enumerate(input_type_list):\n",
+    "        arr_img = plt.imread(f'../data/{input_type}/params3_sims10240_{input_type}_marginals_{cond_idx}.png')\n",
+    "        im = OffsetImage(arr_img, zoom=0.23)\n",
+    "        ab = AnnotationBbox(im, (1, 0), xycoords='data', box_alignment=(1.1,0), )\n",
+    "        axes[idx].add_artist(ab)\n",
+    "        axes[idx].axis('off')\n",
+    "        axes[idx].set_title(input_type)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
