WIP: Use windowing instead of zeroing for samples, fix PCA with n_components set to 4 not 30, write function to calculate band power

--- a/notebooks/rc_circuit/rc_circuit_posterior_comparison.ipynb
+++ b/notebooks/rc_circuit/rc_circuit_posterior_comparison.ipynb
@@ -2,9 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ntolley/anaconda3/envs/sbi/lib/python3.8/site-packages/dask_jobqueue/core.py:19: FutureWarning: format_bytes is deprecated and will be removed in a future release. Please use dask.utils.format_bytes instead.\n",
+      "  from distributed.utils import format_bytes, parse_bytes, tmpfile\n",
+      "/home/ntolley/anaconda3/envs/sbi/lib/python3.8/site-packages/dask_jobqueue/core.py:19: FutureWarning: parse_bytes is deprecated and will be removed in a future release. Please use dask.utils.parse_bytes instead.\n",
+      "  from distributed.utils import format_bytes, parse_bytes, tmpfile\n",
+      "/home/ntolley/anaconda3/envs/sbi/lib/python3.8/site-packages/dask_jobqueue/htcondor.py:6: FutureWarning: parse_bytes is deprecated and will be removed in a future release. Please use dask.utils.parse_bytes instead.\n",
+      "  from distributed.utils import parse_bytes\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'window_samples'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3cb1a3ff010f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0mdt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msim_metadata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dt'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# Sampling interval used for simulation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0mtstop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msim_metadata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'tstop'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# Sampling interval used for simulation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0mwindow_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mposterior_metadata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'window_samples'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'window_samples'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../../code')\n",
@@ -40,22 +64,14 @@
     "    \n",
     "dt = sim_metadata['dt'] # Sampling interval used for simulation\n",
     "tstop = sim_metadata['tstop'] # Sampling interval used for simulation\n",
-    "zero_samples = posterior_metadata['zero_samples'] "
+    "window_samples = posterior_metadata['window_samples'] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "amp1:(0, 1) amp2:(0, 1) latency:(-20, 20) "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Parameter bounds\n",
     "for param_name, param_dict in prior_dict.items():\n",
@@ -87,9 +103,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-7f039e8ea257>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Values on [0,1] mapped to range of bounds defined in prior_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtheta_cond_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.75\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mx_cond_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtheta_dict_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtheta_cond\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtheta_cond_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Values on [0,1] mapped to range of bounds defined in prior_dict\n",
     "theta_cond_list = [np.array([0.3, 0.5, 0.5]), np.array([0.3, 0.5, 0.75])]\n",
@@ -100,7 +128,7 @@
     "                  idx, (param_name, param_dict) in enumerate(prior_dict.items())}\n",
     "\n",
     "    x_cond = simulator(torch.tensor(theta_cond).float())\n",
-    "    x_cond[:, :zero_samples] = np.repeat(x_cond[:, zero_samples], zero_samples).reshape(x_cond.shape[0], zero_samples)\n",
+    "    x_cond = x_cond[:, window_samples[0]:window_samples[1]]\n",
     "                   \n",
     "    theta_dict_list.append(theta_dict)\n",
     "    x_cond_list.append(x_cond.T)\n"
