Use gaussian not uniform white noise

--- a/notebooks/hnn_beta/hnn_beta_cond_plots.ipynb
+++ b/notebooks/hnn_beta/hnn_beta_cond_plots.ipynb
@@ -69,6 +69,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "keyword argument repeated (utils.py, line 112)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/home/ntolley/anaconda3/envs/sbi/lib/python3.8/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3441\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-5e94a645812a>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from utils import UniformPrior, linear_scale_forward\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/home/ntolley/Jones_Lab/hnn_sbi_examples/notebooks/hnn_beta/../../code/utils.py\"\u001b[0;36m, line \u001b[0;32m112\u001b[0m\n\u001b[0;31m    x_noise = np.random.normal(loc=0.0, scale=x_noise_amp, scale=x_orig.shape)\u001b[0m\n\u001b[0m                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword argument repeated\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../../code')\n",
+    "import numpy as np\n",
+    "from utils import UniformPrior, linear_scale_forward\n",
+    "rng_seed = 123\n",
+    "rng = np.random.default_rng(rng_seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'linear_scale_forward' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-f95a585fd650>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m prior_dict = {'amp1': {'bounds': (0, 1), 'scale_func': linear_scale_forward},\n\u001b[0m\u001b[1;32m      2\u001b[0m               \u001b[0;34m'amp2'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'bounds'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'scale_func'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlinear_scale_forward\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m               'latency': {'bounds': (-75, 75), 'scale_func': linear_scale_forward}}\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Create uniform prior and sample\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'linear_scale_forward' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "prior_dict = {'amp1': {'bounds': (0, 1), 'scale_func': linear_scale_forward},\n",
+    "              'amp2': {'bounds': (0, 1), 'scale_func': linear_scale_forward}, \n",
+    "              'latency': {'bounds': (-75, 75), 'scale_func': linear_scale_forward}}\n",
+    "\n",
+    "# Create uniform prior and sample\n",
+    "prior = UniformPrior(parameters=list(prior_dict.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
