Sloppy commit, many changes

--- a/notebooks/hnn_erp/hnn_erp_cond_plots.ipynb
+++ b/notebooks/hnn_erp/hnn_erp_cond_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -65,65 +65,7 @@
      "text": [
       "{'dist_inh': 0.07943279730825811, 'prox_inh': 5.011871510848892, 'dist_exc': 0.07943279730825811, 'prox_exc': 0.01}\n",
       "joblib will run over 1 jobs\n",
-      "Loading custom mechanism files from /home/ntolley/anaconda3/envs/sbi/lib/python3.8/site-packages/hnn_core/mod/x86_64/.libs/libnrnmech.so\n",
-      "Building the NEURON model\n",
-      "[Done]\n",
-      "running trial 1 on 1 cores\n",
-      "Simulation time: 0.5 ms...\n",
-      "Simulation time: 10.0 ms...\n",
-      "Simulation time: 20.0 ms...\n",
-      "Simulation time: 30.0 ms...\n",
-      "Simulation time: 40.0 ms...\n",
-      "Simulation time: 50.0 ms...\n",
-      "Simulation time: 60.0 ms...\n",
-      "Simulation time: 70.0 ms...\n",
-      "Simulation time: 80.0 ms...\n",
-      "Simulation time: 90.0 ms...\n",
-      "Simulation time: 100.0 ms...\n",
-      "Simulation time: 110.0 ms...\n",
-      "Simulation time: 120.0 ms...\n",
-      "Simulation time: 130.0 ms...\n",
-      "Simulation time: 140.0 ms...\n",
-      "Simulation time: 150.0 ms...\n",
-      "Simulation time: 160.0 ms...\n",
-      "Simulation time: 170.0 ms...\n",
-      "Simulation time: 180.0 ms...\n",
-      "Simulation time: 190.0 ms...\n",
-      "Simulation time: 200.0 ms...\n",
-      "Simulation time: 210.0 ms...\n",
-      "Simulation time: 220.0 ms...\n",
-      "Simulation time: 230.0 ms...\n",
-      "Simulation time: 240.0 ms...\n",
-      "{'dist_inh': 7.943283001347201e-05, 'prox_inh': 0.00031622776601683794, 'dist_exc': 0.005011871510848892, 'prox_exc': 0.07943279730825811}\n",
-      "joblib will run over 1 jobs\n",
-      "Building the NEURON model\n",
-      "[Done]\n",
-      "running trial 1 on 1 cores\n",
-      "Simulation time: 0.5 ms...\n",
-      "Simulation time: 10.0 ms...\n",
-      "Simulation time: 20.0 ms...\n",
-      "Simulation time: 30.0 ms...\n",
-      "Simulation time: 40.0 ms...\n",
-      "Simulation time: 50.0 ms...\n",
-      "Simulation time: 60.0 ms...\n",
-      "Simulation time: 70.0 ms...\n",
-      "Simulation time: 80.0 ms...\n",
-      "Simulation time: 90.0 ms...\n",
-      "Simulation time: 100.0 ms...\n",
-      "Simulation time: 110.0 ms...\n",
-      "Simulation time: 120.0 ms...\n",
-      "Simulation time: 130.0 ms...\n",
-      "Simulation time: 140.0 ms...\n",
-      "Simulation time: 150.0 ms...\n",
-      "Simulation time: 160.0 ms...\n",
-      "Simulation time: 170.0 ms...\n",
-      "Simulation time: 180.0 ms...\n",
-      "Simulation time: 190.0 ms...\n",
-      "Simulation time: 200.0 ms...\n",
-      "Simulation time: 210.0 ms...\n",
-      "Simulation time: 220.0 ms...\n",
-      "Simulation time: 230.0 ms...\n",
-      "Simulation time: 240.0 ms...\n"
+      "Building the NEURON model\n"
      ]
     }
    ],
@@ -149,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
