WIP: implement distribution overlap code

--- a/notebooks/hnn_erp/hnn_erp_posterior_compare.ipynb
+++ b/notebooks/hnn_erp/hnn_erp_posterior_compare.ipynb
@@ -9,6 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n",
       "/home/ntolley/anaconda3/envs/sbi/lib/python3.8/site-packages/dask_jobqueue/core.py:19: FutureWarning: format_bytes is deprecated and will be removed in a future release. Please use dask.utils.format_bytes instead.\n",
       "  from distributed.utils import format_bytes, parse_bytes, tmpfile\n",
       "/home/ntolley/anaconda3/envs/sbi/lib/python3.8/site-packages/dask_jobqueue/core.py:19: FutureWarning: parse_bytes is deprecated and will be removed in a future release. Please use dask.utils.parse_bytes instead.\n",
@@ -106,7 +107,10 @@
       "Simulation time: 210.0 ms...\n",
       "Simulation time: 220.0 ms...\n",
       "Simulation time: 230.0 ms...\n",
-      "Simulation time: 240.0 ms...\n"
+      "Simulation time: 240.0 ms...\n",
+      "{'dist_inh': 7.943283001347201e-05, 'prox_inh': 0.00031622776601683794, 'dist_exc': 0.005011871510848892, 'prox_exc': 0.07943279730825811}\n",
+      "joblib will run over 1 jobs\n",
+      "Building the NEURON model\n"
      ]
     },
     {
@@ -121,9 +125,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'dist_inh': 7.943283001347201e-05, 'prox_inh': 0.00031622776601683794, 'dist_exc': 0.005011871510848892, 'prox_exc': 0.07943279730825811}\n",
-      "joblib will run over 1 jobs\n",
-      "Building the NEURON model\n",
       "[Done]\n",
       "running trial 1 on 1 cores\n",
       "Simulation time: 0.5 ms...\n",
@@ -274,7 +275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "088253fec6e342f8a4d32767fccc52f7",
+       "model_id": "a4c534ba5d404bbeba8a5e999ee8fe14",
        "version_major": 2,
        "version_minor": 0
       },
@@ -295,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2adb00043cd84d158b39a8441071dad5",
+       "model_id": "2cca87f9ad16441f83db0846b7e10e8d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -307,176 +308,15 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conditioning Feature: pca4\n",
-      "Training neural network. Epochs trained:  3\r"
+     "ename": "KeyError",
+     "evalue": "'pca4'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-57c126df03ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0minput_type_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'raw_waveform'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'pca4'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'pca30'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'peak'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'bandpower'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mplot_idx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_type_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0mposterior_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mposterior_state_dicts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0minput_type\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m     \u001b[0mstate_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mposterior_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'posterior'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mn_params\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mposterior_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'n_params'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'pca4'"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec8b7cb1dd6e4f24ba992b4d9ecb11ca",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04c232968b7048a4abde98b2ec868dd7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conditioning Feature: pca30\n",
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20c74341b1204873afa07f216b191ce0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6465c4f614ce48318cd758934a4c024b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conditioning Feature: peak\n",
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c421abdcfcdb4df38786063fbbd0440d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d79a48abdfd64f02b24676d38c8e5a7b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conditioning Feature: bandpower\n",
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d7e03fdd42544a1a31699488343e8d4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "576b18163a0f4c14a1ce0f9627cca636",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
