--- a/notebooks/hnn_rc/hnn_rc_summary_feature_compare.ipynb
+++ b/notebooks/hnn_rc/hnn_rc_summary_feature_compare.ipynb
@@ -9,12 +9,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n",
       "/home/ntolley/anaconda3/envs/sbi/lib/python3.8/site-packages/dask_jobqueue/core.py:19: FutureWarning: format_bytes is deprecated and will be removed in a future release. Please use dask.utils.format_bytes instead.\n",
       "  from distributed.utils import format_bytes, parse_bytes, tmpfile\n",
       "/home/ntolley/anaconda3/envs/sbi/lib/python3.8/site-packages/dask_jobqueue/core.py:19: FutureWarning: parse_bytes is deprecated and will be removed in a future release. Please use dask.utils.parse_bytes instead.\n",
       "  from distributed.utils import format_bytes, parse_bytes, tmpfile\n",
       "/home/ntolley/anaconda3/envs/sbi/lib/python3.8/site-packages/dask_jobqueue/htcondor.py:6: FutureWarning: parse_bytes is deprecated and will be removed in a future release. Please use dask.utils.parse_bytes instead.\n",
       "  from distributed.utils import parse_bytes\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../../data/hnn_rc/posteriors/posterior_dicts.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3f2e7dd0a605>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0mdata_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf'../../data/{sim_type}'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{data_path}/posteriors/posterior_dicts.pkl'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moutput_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m     \u001b[0mposterior_state_dicts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdill\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{data_path}/sbi_sims/prior_dict.pkl'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moutput_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../data/hnn_rc/posteriors/posterior_dicts.pkl'"
      ]
     }
    ],
@@ -38,6 +50,7 @@
     "from sklearn.decomposition import PCA\n",
     "from matplotlib.patches import Rectangle\n",
     "from scipy.stats import pearsonr\n",
+    "import pingouin as pg\n",
     "rng_seed = 123\n",
     "rng = np.random.default_rng(rng_seed)\n",
     "\n",
@@ -83,104 +96,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'prox_weight': 0.00022387211078430638, 'dist_weight': 0.00035481339897283176, 'latency': 0.0}\n",
-      "joblib will run over 1 jobs\n",
-      "Loading custom mechanism files from /home/ntolley/anaconda3/envs/sbi/lib/python3.8/site-packages/hnn_core/mod/x86_64/.libs/libnrnmech.so\n",
-      "Building the NEURON model\n",
-      "[Done]\n",
-      "running trial 1 on 1 cores\n",
-      "Simulation time: 0.5 ms...\n",
-      "Simulation time: 10.0 ms...\n",
-      "Simulation time: 20.0 ms...\n",
-      "Simulation time: 30.0 ms...\n",
-      "Simulation time: 40.0 ms...\n",
-      "Simulation time: 50.0 ms...\n",
-      "Simulation time: 60.0 ms...\n",
-      "Simulation time: 70.0 ms...\n",
-      "Simulation time: 80.0 ms...\n",
-      "Simulation time: 90.0 ms...\n",
-      "Simulation time: 100.0 ms...\n",
-      "Simulation time: 110.0 ms...\n",
-      "Simulation time: 120.0 ms...\n",
-      "Simulation time: 130.0 ms...\n",
-      "Simulation time: 140.0 ms...\n",
-      "Simulation time: 150.0 ms...\n",
-      "Simulation time: 160.0 ms...\n",
-      "Simulation time: 170.0 ms...\n",
-      "Simulation time: 180.0 ms...\n",
-      "Simulation time: 190.0 ms...\n",
-      "Simulation time: 200.0 ms...\n",
-      "Simulation time: 210.0 ms...\n",
-      "Simulation time: 220.0 ms...\n",
-      "Simulation time: 230.0 ms...\n",
-      "Simulation time: 240.0 ms...\n",
-      "Simulation time: 250.0 ms...\n",
-      "Simulation time: 260.0 ms...\n",
-      "Simulation time: 270.0 ms...\n",
-      "Simulation time: 280.0 ms...\n",
-      "Simulation time: 290.0 ms...\n",
-      "Simulation time: 300.0 ms...\n",
-      "Simulation time: 310.0 ms...\n",
-      "Simulation time: 320.0 ms...\n",
-      "Simulation time: 330.0 ms...\n",
-      "Simulation time: 340.0 ms...\n",
-      "{'prox_weight': 0.00022387211078430638, 'dist_weight': 0.00035481339897283176, 'latency': 37.5}\n",
-      "joblib will run over 1 jobs\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ntolley/Jones_Lab/hnn_sbi_examples/notebooks/hnn_rc/../../code/utils.py:620: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  return torch.tensor(x, dtype=torch.float32)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building the NEURON model\n",
-      "[Done]\n",
-      "running trial 1 on 1 cores\n",
-      "Simulation time: 0.5 ms...\n",
-      "Simulation time: 10.0 ms...\n",
-      "Simulation time: 20.0 ms...\n",
-      "Simulation time: 30.0 ms...\n",
-      "Simulation time: 40.0 ms...\n",
-      "Simulation time: 50.0 ms...\n",
-      "Simulation time: 60.0 ms...\n",
-      "Simulation time: 70.0 ms...\n",
-      "Simulation time: 80.0 ms...\n",
-      "Simulation time: 90.0 ms...\n",
-      "Simulation time: 100.0 ms...\n",
-      "Simulation time: 110.0 ms...\n",
-      "Simulation time: 120.0 ms...\n",
-      "Simulation time: 130.0 ms...\n",
-      "Simulation time: 140.0 ms...\n",
-      "Simulation time: 150.0 ms...\n",
-      "Simulation time: 160.0 ms...\n",
-      "Simulation time: 170.0 ms...\n",
-      "Simulation time: 180.0 ms...\n",
-      "Simulation time: 190.0 ms...\n",
-      "Simulation time: 200.0 ms...\n",
-      "Simulation time: 210.0 ms...\n",
-      "Simulation time: 220.0 ms...\n",
-      "Simulation time: 230.0 ms...\n",
-      "Simulation time: 240.0 ms...\n",
-      "Simulation time: 250.0 ms...\n",
-      "Simulation time: 260.0 ms...\n",
-      "Simulation time: 270.0 ms...\n",
-      "Simulation time: 280.0 ms...\n",
-      "Simulation time: 290.0 ms...\n",
-      "Simulation time: 300.0 ms...\n",
-      "Simulation time: 310.0 ms...\n",
-      "Simulation time: 320.0 ms...\n",
-      "Simulation time: 330.0 ms...\n",
-      "Simulation time: 340.0 ms...\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-f85e2ae2816e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Values on [0,1] mapped to range of bounds defined in prior_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtheta_cond_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.35\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.55\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.35\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.55\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.75\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mx_cond_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtheta_dict_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -318,180 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conditioning Feature: pca30\n",
-      "Training neural network. Epochs trained:  3\r"
+     "ename": "NameError",
+     "evalue": "name 'UniformPrior' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-c0baaf27a11c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprior\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mUniformPrior\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprior_dict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mn_params\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprior_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mlimits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprior_dict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnval_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'UniformPrior' is not defined"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84fe8cb709d546beac023deb8aa3c297",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "169d9e76344943c39f8140df5751ddb0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conditioning Feature: pca4\n",
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44370820c34d48ba8777ce66294634f2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "febe2a9b10ce4f4f88ca273662292eb5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conditioning Feature: peak\n",
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "830c54973cdc4540b09e120d0f761f93",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36072c09cd2143fda44b8305093ebbf7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conditioning Feature: bandpower\n",
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e100c1ffc1684c65b4922b8a1c941d8b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training neural network. Epochs trained:  3\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c385f5ec5264bc49270981dadcb63a5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Drawing 1000 posterior samples:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
