Update graphical abstract

--- a/notebooks/hnn_beta/hnn_beta_posterior_compare.ipynb
+++ b/notebooks/hnn_beta/hnn_beta_posterior_compare.ipynb
@@ -16,7 +16,8 @@
     "from sbi import inference as sbi_inference\n",
     "from utils import (linear_scale_array, UniformPrior,\n",
     "                   get_dataset_psd, get_dataset_peaks, load_posterior, simulator_hnn,\n",
-    "                   get_parameter_recovery, get_posterior_predictive_check, hnn_beta_param_function)\n",
+    "                   get_parameter_recovery, get_posterior_predictive_check, hnn_beta_param_function,\n",
+    "                   psr, pir)\n",
     "from hnn_core import jones_2009_model\n",
     "from functools import partial\n",
     "import dill\n",
@@ -295,6 +296,7 @@
    "outputs": [],
    "source": [
     "n_points = 50j\n",
+    "n_points_real = int(n_points.imag)\n",
     "grid = torch.tensor(np.mgrid[0:1:n_points, 0:1:n_points, 0:1:n_points, 0:1:n_points].reshape(4, -1).T).float()\n",
     "step_size = 1/n_points.imag"
    ]
@@ -458,7 +460,9 @@
     "        theta_cond_transformed_list.append(theta_cond_transformed)\n",
     "        df_list.append(df_temp)\n",
     "        \n",
-    "        log_prob_grid = posterior.log_prob(grid, x=load_info[input_type]['x_cond'].squeeze()).reshape((50,50,50,50))\n",
+    "        log_prob_grid = posterior.log_prob(\n",
+    "            grid, x=load_info[input_type]['x_cond'].squeeze()).reshape(\n",
+    "            (n_points_real, n_points_real, n_points_real, n_points_real))\n",
     "        prob_grid_list.append(np.exp(log_prob_grid.numpy()))\n",
     "        \n",
     "    df = pd.concat(df_list)\n",
