New figures for empirical beta

--- a/notebooks/hnn_beta/hnn_beta_cond_plots.ipynb
+++ b/notebooks/hnn_beta/hnn_beta_cond_plots.ipynb
@@ -392,9 +392,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (sbi)",
+   "display_name": "sfn_2023",
    "language": "python",
-   "name": "sbi"
+   "name": "sfn_2023"
   },
   "language_info": {
    "codemirror_mode": {
@@ -406,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
